--- a/style.css
+++ b/style.css
@@ -184,6 +184,7 @@ body{
     width: 100%;
     height: fit-content;
     position: relative;
+    margin: 100px 0;
     .container{
         width: 1200px;
         margin: auto;
@@ -294,3 +295,127 @@ body{
 
 
 /* ----------------------------About section Ends-------------------------- */
+
+
+/* ------------------------------Service Section Starts------------------------ */
+
+.service-section{
+    width: 100%;
+    height: fit-content;
+    position: relative;
+    margin: 100px 0;
+    & p , h1{
+        text-align: center;
+    }
+    .container{
+        width: 70%;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        .item{
+            height: 180px;
+            width: 500px;
+            border: 1px solid #e1dddd50;
+            margin: 20px auto;
+            position: relative;
+            display: flex;
+            align-items: center;
+            & img{
+                height: 80px;
+                margin: auto 40px;
+                justify-content: center;
+            }
+            .text-op{
+                text-align: left;
+                justify-content: left;
+                & P{
+                    text-align: left;
+                }
+            }
+
+        }
+    }
+}
+
+/* ------------------------------Service Section End------------------------ */
+
+/* ------------------------------Testimonials Section Starts------------------- */
+
+.Testimonials{
+    width: 100%;
+    height: fit-content;
+    position: relative;
+    background-color:#F8F9FA ;
+    padding: 100px 0;
+    .text{
+        text-align: center;
+        .b{
+            padding: 7px 16px;
+            background-color: rgb(248, 243, 197);
+            display: inline;
+            border-radius: 20px;
+            color: rgb(247, 159, 144);
+            text-transform: uppercase;
+            font-size: 10px;
+        }
+        .para{
+            width: 500px;
+            margin: 0 auto;
+            opacity: .5;
+        }
+    }
+    .container{
+        width: 95%;
+        height: 100%;
+        margin: 50px auto;
+        display: flex;
+        .items{
+            height: fit-content;
+            width: 93%;
+            display: flex;
+            align-items: center;
+            margin: auto;
+            & i{
+                font-size: 2.6rem;
+                opacity: .6;
+                font-weight: normal;
+            }
+            .item{
+                background-color: #fff;
+                border-radius: 10px;
+                height: 250px;
+                width: 450px;
+                margin: 0 20px;
+                border: 1px solid #d0cecead;
+                padding: 10px 20px;
+                & p{
+                    font-size: 1.3rem;
+                    opacity: .6;
+                }
+                .img{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    & div{
+                        margin: 0 20px;
+                        & p{
+                            
+                        }
+                    }
+                    & img{
+                        height: 50px;
+                    }
+                    .name{
+                        line-height: 10px;
+                        & p{
+                            font-size: 1rem ;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+/* ------------------------------Testimonials Section Ends------------------- */
