--- a/style.css
+++ b/style.css
@@ -342,6 +342,58 @@ body{
 
 /* ------------------------------Service Section End------------------------ */
 
+
+/* ---------------------------------Tean Section Starts------------------------------- */
+.team{
+    height: fit-content;
+    width: 100%;
+    position: relative;
+    padding: 50px 0;
+    .text{
+        text-align: center;
+        padding: 30px 0;
+        & p1{
+            padding: 7px 16px;
+            background-color: rgb(248, 243, 197);
+            display: inline;
+            border-radius: 20px;
+            color: rgb(247, 159, 144);
+            text-transform: uppercase;
+            font-size: 10px;
+        }
+        & p{
+            width: 500px;
+            margin: auto;
+        }
+    }
+    .container{
+        width: 80%;
+        height: 100%;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
+        .item{
+            width: 200px;
+            height: 250px;
+            margin: 30px auto;
+            text-align: center;
+            & img{
+                height: 200px;
+                width: fit-content;
+                margin: 0 auto;
+                justify-content: center;
+                border-radius: 7px;
+            }
+        }
+    }
+}
+
+
+
+
+
+/* ---------------------------------Tean Section Ends------------------------------- */
+
 /* ------------------------------Testimonials Section Starts------------------- */
 
 .Testimonials{
@@ -372,25 +424,32 @@ body{
         height: 100%;
         margin: 50px auto;
         display: flex;
+        & i{
+            font-size: 2.6rem;
+            opacity: .6;
+            font-weight: normal;
+            transform: translateY(120px);
+        }
         .items{
             height: fit-content;
-            width: 93%;
+            width: 90%;
             display: flex;
+            flex-wrap:wrap ;
             align-items: center;
+            justify-content: center;
             margin: auto;
-            & i{
-                font-size: 2.6rem;
-                opacity: .6;
-                font-weight: normal;
-            }
             .item{
                 background-color: #fff;
                 border-radius: 10px;
                 height: 220px;
-                width: 450px;
-                margin: 0 20px;
+                width: 380px;
+                margin: 20px 20px;
                 border: 1px solid #d0cecead;
                 padding: 10px 20px;
+                transition: all .5s;
+                &:hover{
+                    border: 1px solid #000000;
+                }
                 & p{
                     font-size: 1.3rem;
                     opacity: .6;
@@ -450,6 +509,10 @@ body{
                 & i{
                     margin-right: 10px;
                 }
+            }
+            & i{
+                margin: 0 5px;
+                transform: scale(1.3);
             }
         }
     }
