--- a/style.css
+++ b/style.css
@@ -182,6 +182,102 @@ body{
 
 
 
+/* ----------------------------Questions section Starts-------------------------- */
+
+.question{
+    width: 100%;
+    height: 80vh;
+    position: relative;
+    margin: 50px 0;
+    background-color: #F8F9FA;
+    padding: 40px 0;
+    .container{
+        width: 1100px;
+        height: 100%;
+        margin: auto;
+        .text{
+            text-align: center;
+            & p1{
+                padding: 7px 16px;
+                background-color: rgb(248, 243, 197);
+                display: inline;
+                border-radius: 20px;
+                color: rgb(225, 75, 48);
+                text-transform: uppercase;
+                font-size: 12px;
+            }
+        }
+        .qtn{
+            width: 1100px;
+            height: fit-content;
+            margin: 100px auto;
+            justify-content: center;
+            .head{
+                height: 40px;
+                width: 100%;
+                background-color: #fff;
+                font-size: 1.3rem;
+                font-weight: bolder;
+                padding-top: 15px;
+                padding: auto 50px;
+                border-radius: 8px;
+                transition: all .5s;
+                &:nth-child(2){
+                    margin: 10px 0;
+                }
+                & i{
+                    padding-left: 30px;
+                    padding-right: 15px;
+                    transition: all .3s;
+                }
+                .child{
+                    transition: all .5s;
+                }
+                .child{
+                    font-size: 1rem;
+                    font-weight: normal;
+                    margin-top:20px;
+                    background-color: #fff;
+                    padding: 6px 20px;
+                    display: none;
+                    transition: all .5s;
+                    z-index: 5;
+                    & p{
+                        transition: all .5s;
+
+                    }
+                }
+                .fa-minus{
+                    display: none;
+                }
+                &:hover{
+                    background-color: #081158;
+                    color: #fff;
+                    margin-bottom: 100px;
+                    .fa-minus{
+                        display: inline;
+                    }
+                    .fa-plus{
+                        display: none;
+                    }
+                    .child{
+                        display: block;
+                        color: #000;
+                        transition: all .5s;
+                        z-index: 2;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+/* ----------------------------Questions section Ends-------------------------- */
+
+
+
+
 /* -------------------------Features section Starts------------------------------ */
 
 .features{
