--- a/style.css
+++ b/style.css
@@ -54,9 +54,25 @@ body{
             font-weight: bold;
         }
         .Navigation{
-            #check,.check{
+            & ul{
+                z-index: 5;
+                background: #fff;
+                left: 0;
+                width: 100%;
+                height: 100vh;
+                top: 80px;
+                position: absolute;
                 display: none;
-                font-size: 2rem;
+                list-style: none;
+                & li{
+                    top: 100px;
+                    margin: 30px 0;
+                }
+            }
+
+            #check,.check{
+                    display: none;
+                    font-size: 2rem;
             }
             & a{
                 margin-right: 27px;
@@ -629,6 +645,7 @@ body{
                     }
                     .name{
                         line-height: 10px;
+                        display: block;
                         & p{
                             font-size: 1rem ;
                         }
@@ -647,7 +664,7 @@ body{
 
 .container{
     position: relative;
-    width: 600px;
+    width: 700px;
     height: 600px;
     margin: 50px auto;
     .name{
@@ -744,20 +761,49 @@ body{
 /* ----------------------------------- Mobile view section Starts----------------------------- */
 
 @media (max-width:768px) {
+
+    /* ------------head---------- */
     .header{
+        position: sticky;
+        top: 0;
+        background-color: #fff;
         .content{
-            width: 400px;
-            justify-content: space-between;
+            width: 100%;
+            .logo{
+                padding-left: 20px;
+            }
             .Navigation{
-                .check{
-                    display: inline-block ;
+                .DropDown{
+                    display: none;
                 }
                 & a, .btn{
                     display: none;
+                    line-height: 50px;
+                    margin-top: 20px;
+                }
+                .check{
+                    display: block;
+                    position: absolute;
+                    right: 70px;
+                    top: 30px;
+                }
+                & ul{
+                    display: block;
+                    left: -700px;
+                    transition: all .3s;
+                    & li a{
+                        display: block; 
+                    }
+                }
+                #check:checked ~ ul{
+                    left: 0;
                 }
             }
         }
     }
+    
+    /* ------------head---------- */
+
 }
 
 
