--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body{
                 left: 0;
                 width: 100%;
                 height: 100vh;
-                top: 80px;
+                top: 73px;
                 position: absolute;
                 display: none;
                 list-style: none;
@@ -830,11 +830,19 @@ body{
                 }
             }
             .right{
-                margin: 0 auto;
-                transform: scale(.7);
+                margin-left: -70px ;
+                transform: scale(.5);
             }
 
 
+        }
+    }
+
+    /* ------------Features---------- */
+    .features{
+        transform: scale(.87);
+        .container2 .items .item{
+            margin-top: -30px;
         }
     }
 
@@ -845,10 +853,11 @@ body{
         height: fit-content;
         position: relative;
         .container{
-            width: 95%;
+            width: 100%;
             display: block;
+            margin: -30px;
             .left{
-                transform: scale(.7);
+                transform: scale(.6);
                 margin: -150px 0 20px -70px;
             }
             .right{
@@ -862,17 +871,52 @@ body{
     }
 
 
+    /* ------------Team---------- */
+    .team .text p{
+        width: 80%;
+    }
+
+    /* ------------Stats---------- */
+    .stats{
+        width: 100%;
+        height: fit-content;
+        position: relative;
+        .container {
+            display: block;
+            .numaric{
+                width: 100%;
+                & span{
+                    display: inline-block;
+                }
+            }
+        }
+    }
+
+
     /* ------------TestMonials---------- */
     .Testimonials{
         width: 100%;
         margin-top: -150px;
+        .container i{
+            display: none;
+        }
+        .text .para{
+            width: 85%;
+        }
     }
+
+
+
+    /* ------------Footer---------- */
     .footer{
         width: 100%;
         height: fit-content;
         position: relative;
         .container{
             display: block;
+            .item{
+                margin: 40px 0 ;
+            }
         }
     }
 
